--- a/app/src/main/res/layout/activity_lawyer_profile.xml
+++ b/app/src/main/res/layout/activity_lawyer_profile.xml
@@ -90,7 +90,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="8dp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/tvOab"
             app:layout_constraintStart_toEndOf="@+id/tvName"
             app:layout_constraintTop_toTopOf="@+id/tvName"
@@ -259,22 +259,24 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/lvPhone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="?android:attr/selectableItemBackground"
-                    android:clickable="true"
 
+                    android:clickable="true"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/soon"
+                        android:text="Telefone"
                         android:textColor="@color/colorAccent"
                         android:textSize="13sp" />
 
                     <TextView
+                        android:id="@+id/tvPhone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
