--- a/app/src/main/res/layout/activity_lawyer_profile.xml
+++ b/app/src/main/res/layout/activity_lawyer_profile.xml
@@ -23,9 +23,9 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="8dp"
-            android:padding="10dp"
             android:layout_marginTop="8dp"
             android:background="@android:color/transparent"
+            android:padding="10dp"
             android:tint="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -46,6 +46,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnBack" />
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fbName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:clickable="true"
+            app:fabSize="mini"
+            app:layout_constraintBottom_toBottomOf="@+id/tvName"
+            app:layout_constraintEnd_toStartOf="@+id/tvName"
+            app:layout_constraintTop_toTopOf="@+id/tvName"
+            app:srcCompat="@drawable/ic_create_white_24dp" />
 
         <TextView
             android:id="@+id/tvName"
@@ -61,37 +72,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivImage" />
 
-
-        <TextView
-            android:id="@+id/tvOab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvName"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:text="@string/loading"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvName" />
-
         <ImageView
             android:id="@+id/ivVerified"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_below="@+id/tvOab"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="8dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@+id/tvOab"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/tvName"
             app:layout_constraintStart_toEndOf="@+id/tvName"
             app:layout_constraintTop_toTopOf="@+id/tvName"
             app:srcCompat="@drawable/verified" />
@@ -103,7 +92,7 @@
             android:clickable="true"
             app:fabSize="mini"
             app:layout_constraintBottom_toTopOf="@+id/tvName"
-            app:layout_constraintEnd_toEndOf="@+id/ivImage"
+            app:layout_constraintStart_toStartOf="@+id/ivImage"
             app:srcCompat="@drawable/ic_create_white_24dp" />
 
     </android.support.constraint.ConstraintLayout>
@@ -271,12 +260,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Telefone"
+                        android:text="@string/oab"
                         android:textColor="@color/colorAccent"
                         android:textSize="13sp" />
 
                     <TextView
-                        android:id="@+id/tvPhone"
+                        android:id="@+id/tvOab"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
@@ -303,11 +292,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/soon"
+                        android:text="@string/phone"
                         android:textColor="@color/colorAccent"
                         android:textSize="13sp" />
 
                     <TextView
+                        android:id="@+id/tvPhone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
