--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.CostumerProfileActivity">
+    tools:context=".View.UserProfileActivity">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/rellay1"
@@ -23,9 +23,9 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="8dp"
-            android:padding="10dp"
             android:layout_marginTop="8dp"
             android:background="@android:color/transparent"
+            android:padding="10dp"
             android:tint="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -46,6 +46,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnBack" />
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fbChangeName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:clickable="true"
+            app:fabSize="mini"
+            app:layout_constraintBottom_toBottomOf="@+id/tvName"
+            app:layout_constraintEnd_toStartOf="@+id/tvName"
+            app:layout_constraintTop_toTopOf="@+id/tvName"
+            app:srcCompat="@drawable/ic_create_white_24dp" />
 
         <TextView
             android:id="@+id/tvName"
@@ -53,6 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="@string/loading"
             android:textColor="@color/white"
@@ -63,18 +75,18 @@
 
 
         <TextView
-            android:id="@+id/tvOab"
+            android:id="@+id/tvEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvName"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:text="@string/loading"
-            android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -89,7 +101,7 @@
             android:clickable="true"
             app:fabSize="mini"
             app:layout_constraintBottom_toTopOf="@+id/tvName"
-            app:layout_constraintEnd_toEndOf="@+id/ivImage"
+            app:layout_constraintStart_toStartOf="@+id/ivImage"
             app:srcCompat="@drawable/ic_create_white_24dp" />
 
     </android.support.constraint.ConstraintLayout>
@@ -103,7 +115,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rellay1">
-
 
 
         <RelativeLayout
@@ -188,12 +199,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Email"
+                        android:text="@string/soon"
                         android:textColor="@color/colorAccent"
                         android:textSize="13sp" />
 
                     <TextView
-                        android:id="@+id/tvEmail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
