--- a/app/src/main/res/layout/fragment_lawyer.xml
+++ b/app/src/main/res/layout/fragment_lawyer.xml
@@ -46,7 +46,7 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <android.support.v7.widget.CardView
-                            android:id="@+id/btnDomicile"
+                            android:id="@+id/cvFindCase"
                             android:layout_width="160dp"
                             android:layout_height="190dp"
                             android:layout_marginStart="10dp"
@@ -67,14 +67,14 @@
                                     android:layout_height="64dp"
                                     android:background="@drawable/circle"
                                     android:padding="10dp"
-                                    android:src="@drawable/ic_account_balance_white_24dp" />
+                                    android:src="@drawable/search" />
 
                                 <TextView
-                                    android:id="@+id/tvDomicile"
+                                    android:id="@+id/tvFindCase"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="10dp"
-                                    android:text="Title"
+                                    android:text="@string/find_cases"
                                     android:textStyle="bold" />
 
                                 <View
@@ -84,12 +84,12 @@
                                     android:background="@color/colorGrayLight" />
 
                                 <TextView
-                                    android:id="@+id/tvDomicileMsg"
+                                    android:id="@+id/tvFindCaseMsg"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:gravity="center"
                                     android:padding="5dp"
-                                    android:text="Description"
+                                    android:text="@string/find_cases_msg"
                                     android:textColor="@android:color/darker_gray" />
 
                             </LinearLayout>
