--- a/app/src/main/res/layout/activity_open_case.xml
+++ b/app/src/main/res/layout/activity_open_case.xml
@@ -446,7 +446,7 @@
     </ScrollView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fbWhatsApp"
+        android:id="@+id/fbChat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -454,6 +454,6 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/whats" />
+        app:srcCompat="@drawable/message" />
 
 </android.support.constraint.ConstraintLayout>
